--- a/templates/base.html
+++ b/templates/base.html
@@ -180,8 +180,8 @@
                             <li class="nav-item dropdown"> -->
                     <a href="#" class="nav-link dropdown-toggle d-flex align-items-center me-4"
                         data-bs-toggle="dropdown" aria-expanded="false">
-                        <h4 class="me-4">{{ user.username | capfirst }}</h4>
-                        <img class="rounded-circle me-2" src="{% static 'images/admin.png' %}" alt="User Avatar"
+                        <h4 class="me-4 member">{{ user.username | capfirst }}</h4>
+                        <img class="rounded-circle me-2" src="{% static 'images/admin1.png' %}" alt="User Avatar"
                             width="32" height="32">
                     </a>
                     <ul class="dropdown-menu dropdown-menu-end">
@@ -226,7 +226,7 @@
             </nav>
 
             <!-- Main content -->
-            <main class="main_right container-fluid py-3">
+            <main class="main_right container-fluid py-3 bg-custom">
                 <div class="row">
                     <div class="col-12">
                         <!-- Messages -->
