--- a/apps/book/templates/book/authors/list_authors.html
+++ b/apps/book/templates/book/authors/list_authors.html
@@ -14,6 +14,7 @@
                     <th scope="col">#</th>
                     <th scope="col">Name</th>
                     <th scope="col">Country</th>
+                    <th scope="col">Status</th>
                     <th scope="col">Actions</th>
                 </tr>
             </thead>
@@ -23,6 +24,12 @@
                     <td scope="row">{{ author.id }}</td>
                     <td>{{ author.fullname }}</td>
                     <td>{{ author.country }}</td>
+                    <td>
+                        {% if author.is_active %}
+                        <span class="badge btn-active">Active</span>
+                        {% else %}
+                        <span class="badge text-bg-secondary">Inactive</span>
+                        {% endif %}
                     <td>
                         <a href="{% url 'book:edit_author' author.id %}" class="btn btn-sm btn-warning">Edit</a>
                         <a href="{% url 'book:delete_author' author.id %}" class="btn btn-sm btn-danger">Delete</a>
