--- a/apps/book/templates/book/books/available_books.html
+++ b/apps/book/templates/book/books/available_books.html
@@ -6,7 +6,7 @@
 {% endblock extra_css %}
 {% block content %}
 <div class="card border-0 ">
-    <div class="card-header glass-card border-0">
+    <div class="card-header border-0">
         <div class="row" style="margin: 30px;">
             <div class="col-md-12 text-center ">
                 <strong class="card-title">
@@ -22,19 +22,18 @@
                     <a href="{% url 'book:book_detail' book.pk %}" class="text-decoration-none text-dark ">
                         <div class="card h-100 custom-card-shadow">
                             <div class="card-img-container">
-                                <div class="glass-card">
-                                    <img class="card-img-top img-card" src="{{ book.image.url }}"
-                                        alt="{{ book.title }}">
-                                </div>
+
+                                <img class="card-img-top img-card" src="{{ book.image.url }}" alt="{{ book.title }}">
+
                             </div>
                             <div class="card-body d-flex flex-column">
                                 <h4 class="card-title mb-3 fw-semibold fs-4 text-center">{{ book.title }}</h4>
-                                <p class="card-text orange-txt fw-semibold fs-6 text-center">
+                                <p class="card-text fw-semibold fs-6 text-center highlight-txt">
                                     Autor: {{ book.get_authors }}
                                 </p>
                                 <p class="card-text">{{ book.description | truncatewords:20 }}</p>
                                 <a href="{% url 'book:book_detail' book.pk %}"
-                                    class="btn orange-btn w-100 m-auto mt-3">View</a>
+                                    class="btn blue-btn w-100 m-auto mt-3">View</a>
                             </div>
                         </div>
                     </a>
@@ -43,7 +42,7 @@
             </div>
         </div>
 
-        <div class="pagination">
+        <div class="pagination mt-5 mb-4">
             <span class="step-links">
                 {% if page_obj.has_previous %}
                 <a href="?page=1">&laquo; First</a>
