--- a/apps/book/templates/book/books/available_books.html
+++ b/apps/book/templates/book/books/available_books.html
@@ -5,7 +5,7 @@
 
 {% endblock extra_css %}
 {% block content %}
-<div class="card border-0 ">
+<div class="card shadow-none border-0 ">
     <div class="card-header border-0">
         <div class="row" style="margin: 30px;">
             <div class="col-md-12 text-center ">
@@ -33,7 +33,7 @@
                                 </p>
                                 <p class="card-text">{{ book.description | truncatewords:20 }}</p>
                                 <a href="{% url 'book:book_detail' book.pk %}"
-                                    class="btn blue-btn w-100 m-auto mt-3">View</a>
+                                    class="btn primary-btn w-100 m-auto mt-3">View</a>
                             </div>
                         </div>
                     </a>
