--- a/static/css/style.css
+++ b/static/css/style.css
@@ -4,7 +4,7 @@
 /* VARIABLES */
 :root {
     /* Backgrounds */
-    --bg-primary: ; /* Soft Ivory */
+    --bg-primary: #f9f9f9; /* Soft Ivory */
     --bg-secondary: #e8e6e1; /* Warm Gray / Cards */
 
     --primary-colour: #6f4e37; /* Anthracite Gray */
@@ -16,11 +16,8 @@
 
     /* Buttons */
     --btn-primary: #264653; /* Sapphire Blue */
-    --btn-secondary: #f28482; /* Soft Coral */
-    --btn-secondary1: #e9c46a; /* Soft Mustard */
-
-    /* Alerts / Errors */
-    --alert-error: #8b0000; /* Wine Red */
+    --btn-error: #e43c3c; /* Soft Coral */
+    --btn-edit: #f4cf74; /* Soft Mustard */
 
     /* Accents / Icons */
     --accent: #2a9d8f; /* Forest Green */
@@ -29,7 +26,7 @@
 body {
     font-family: 'Lato', sans-serif;
     background-color: var(--bg-primary);
-    color: var(--text-primary);
+    color: var(--primary-colour);
     margin: 0;
     padding: 0;
 }
@@ -41,7 +38,7 @@ h4,
 h5,
 h6 {
     font-family: 'Lato', sans-serif;
-    color: var(--text-primary);
+    color: var(--primary-colour);
 }
 
 p {
@@ -64,56 +61,57 @@ p.highlight-txt {
     color: var(--text-primary);
     font-weight: 600;
 }
+
+.actions-btn {
+    font-size: 1.2rem;
+    padding: 0.3rem 1.2rem;
+    color: #f9f9f9;
+    font-weight: 500;
+}
 .btn-edit {
-    background-color: #d7965a;
-    color: #000a3f;
-    border: 1px solid #d0d4db;
+    background-color: var(--btn-edit);
+    color: var(--bg-primary);
+    border: 1px solid var(--btn-edit);
 }
 .btn-edit:hover {
-    background-color: #b4bcc9;
+    background-color: #f9c646;
+    scale: 1.05;
 }
 
 .btn-delete {
-    color: #fff7f6;
     border: none;
-    background-color: #f24e4e;
+    background-color: #e43c3c;
 }
 .btn-delete:hover {
-    background-color: #e45d49;
+    background-color: #eb2406;
+    scale: 1.05;
+    color: #f9f9f9;
 }
 
 .btn-active {
-    background-color: #09999e;
+    background-color: var(--accent);
     border: none;
-    color: #fff7f6;
-}
-.btn-active:hover {
-    background-color: #009fa4;
 }
 
 .btn-inactive {
-    background-color: #c5cbd4;
+    background-color: var(--text-secondary);
     border: none;
-    color: #6c757d;
     cursor: not-allowed;
-    opacity: 0.9;
-}
-.btn-inactive:hover {
-    background-color: #b6bcc6;
-    color: #5c636a;
+    opacity: 0.5;
 }
 
 .primary-btn {
-    background-color: var(--text-primary) !important;
-    color: #ffffff !important;
+    background-color: #ffffff !important;
+    color: var(--text-primary) !important;
     font-weight: 600;
+    border-color: var(--text-primary);
     /* width: 100% !important; */
     justify-content: center;
 }
 .primary-btn:hover {
-    background-color: #ffffff !important;
-    color: var(--secondary-colour) !important;
-    border-color: var(--secondary-colour);
+    background-color: var(--text-primary) !important;
+    color: var(--bg-primary) !important;
+    border-color: var(--text-primary);
 }
 
 .blue-btn {
@@ -139,6 +137,7 @@ p.highlight-txt {
 }
 
 /* Cards */
+
 .custom-card-shadow {
     box-shadow: 0 4px 12px rgba(111, 78, 55, 0.5);
 }
@@ -159,7 +158,7 @@ p.highlight-txt {
 }
 
 .bg-custom {
-    background-color: rgba(33, 37, 41, 0.03) !important;
+    background-color: #f9f9f9 !important;
 }
 
 .img-card {
