--- a/apps/book/templates/book/authors/create_author.html
+++ b/apps/book/templates/book/authors/create_author.html
@@ -8,7 +8,7 @@
         {% csrf_token %}
         {{ form.non_field_errors }}
         {{ form.as_p }}
-        <button type="submit" class="btn btn-primary">Save</button>
+        <button type="submit" class="btn secondary-btn">Save</button>
     </form>
 
     {% endblock content %}
