--- a/apps/book/templates/book/authors/list_authors.html
+++ b/apps/book/templates/book/authors/list_authors.html
@@ -8,31 +8,35 @@
 
     {% if authors %}
     <div class="table-responsive">
-        <table class="table table-striped table-bordered">
+        <table class="table table-auto table-striped table-bordered">
             <thead class="table-light">
                 <tr>
-                    <th scope="col">#</th>
+                    <th scope="col" class="text-center">#</th>
                     <th scope="col">Name</th>
                     <th scope="col">Country</th>
-                    <th scope="col">Status</th>
-                    <th scope="col">Actions</th>
+                    <th scope="col" class="text-center">Status</th>
+                    <th scope="col"">Actions</th>
                 </tr>
             </thead>
             <tbody>
                 {% for author in authors %}
                 <tr>
-                    <td scope="row">{{ author.id }}</td>
+                    <td scope=" row" class="align-middle text-center">{{ author.id }}</td>
                     <td>{{ author.fullname }}</td>
                     <td>{{ author.country }}</td>
-                    <td>
+                    <td class="align-middle text-center">
                         {% if author.is_active %}
-                        <span class="badge btn-active">Active</span>
+                        <span class="badge btn-active actions-btn fs-6">Active</span>
                         {% else %}
-                        <span class="badge text-bg-secondary">Inactive</span>
+                        <span class="badge text-bg-secondary actions-btn fs-6">Inactive</span>
                         {% endif %}
                     <td>
-                        <a href="{% url 'book:edit_author' author.id %}" class="btn btn-sm btn-warning">Edit</a>
-                        <a href="{% url 'book:delete_author' author.id %}" class="btn btn-sm btn-danger">Delete</a>
+                        <a href="{% url 'book:edit_author' author.id %}"
+                            class="btn btn-sm btn-edit actions-btn ms-2">Edit</a>
+                        {% if author.is_active %}
+                        <a href="{% url 'book:delete_author' author.id %}"
+                            class="btn btn-sm btn-delete actions-btn ms-3">Delete</a>
+                        {% endif %}
                     </td>
 
 
@@ -42,7 +46,7 @@
                     <td colspan="4">No authors found.</td>
                 </tr>
                 {% endfor %}
-            </tbody>
+                </tbody>
         </table>
     </div>
     {% endif %}
