--- a/apps/book/templates/book/books/books_list.html
+++ b/apps/book/templates/book/books/books_list.html
@@ -4,12 +4,12 @@
 
 {% block content %}
 <div class="container mt-4">
-    <h1 class="h4 m-0">List of Books</h1>
+    <h1 class="h4 fs-3 fw-semibold mb-3">List of Books</h1>
 
     {% if books %}
     <div class="table-responsive">
-        <table class="table table-striped table-bordered">
-            <thead class="table-light">
+        <table class="table table-auto table-striped table-bordered">
+            <thead class="table-light fs-4">
                 <tr>
                     <th scope="col">#</th>
                     <th scope="col">Title</th>
@@ -24,23 +24,23 @@
             <tbody>
                 {% for book in books %}
                 <tr>
-                    <td scope="row">{{ book.id }}</td>
-                    <td>{{ book.title }}</td>
+                    <td scope="row" class="align-middle text-center">{{ book.id }}</td>
+                    <td class="align-middle">{{ book.title }}</td>
                     <!-- <td>{{ book.published_date }}</td> -->
-                    <td class="no-style">
+                    <td class="no-style align-middle">
                         {% for author in book.author.all %}
                         <li>{{ author.fullname }}</li>
                         {% endfor %}
                     </td>
-                    <td>
+                    <td class="align-middle text-center">
                         {% if book.is_active %}
-                        <span class="badge btn-active actions-btn">Active</span>
+                        <span class="badge btn-active actions-btn fs-6">Active</span>
                         {% else %}
-                        <span class="badge text-bg-secondary actions-btn">Inactive</span>
+                        <span class="badge text-bg-secondary actions-btn fs-6">Inactive</span>
                         {% endif %}
                     </td>
-                    <td>{{ book.stock }}</td>
-                    <td>
+                    <td class="align-middle text-center">{{ book.stock }}</td>
+                    <td class="align-middle">
                         <a href="{% url 'book:edit_book' book.id %}"
                             class="btn btn-sm btn-edit actions-btn ms-2">Edit</a>
                         <!-- <a href="{% url 'book:delete_book' book.id %}" class="btn btn-sm btn-delete ms-3">Delete</a> -->
