--- a/static/css/style.css
+++ b/static/css/style.css
@@ -114,15 +114,12 @@ p.highlight-txt {
     border-color: var(--text-primary);
 }
 
-.blue-btn {
-    background-color: #ffffff;
-    color: var(--primary-colour) !important;
-    border-color: var(--primary-colour);
-}
-.blue-btn:hover {
-    background-color: var(--primary-colour) !important;
-    color: #ffffff !important;
-    border-color: var(--primary-colour);
+.secondary-btn {
+    background-color: var(--text-primary) !important;
+    color: var(--bg-primary) !important;
+    font-weight: 600;
+    /* width: 100% !important; */
+    justify-content: center;
 }
 
 .orange-txt {
@@ -177,6 +174,11 @@ p.highlight-txt {
     transform: translateY(-4px);
     transition: all 0.3s ease-in-out;
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
+}
+
+table {
+    width: auto;
+    table-layout: auto;
 }
 
 /* UTILITIES */
