--- a/apps/book/templates/book/books/create_book.html
+++ b/apps/book/templates/book/books/create_book.html
@@ -8,7 +8,7 @@
         {% csrf_token %}
         {{ form.non_field_errors }}
         {{ form.as_p }}
-        <button type="submit" class="btn btn-success">Save Book</button>
+        <button type="submit" class="btn secondary-btn">Save Book</button>
     </form>
 </div>
 
